# ensinalab_content_engine_v1

./: .env.example  .env.minimal  .gitignore  ARCHITECTURE.md  AUTHENTICATION.md  CANCEL_ENDPOINTS.md  CONFIGURE_ELEVENLABS.md  DATABASE_SCRIPTS.md  DEPLOY_CHECKLIST.md  DEPLOY_RENDER.md  DEPLOY_RENDER_VISUAL.md  Dockerfile  FIX_VIDEO_ORIENTATION_ERROR.md  LANGGRAPH_IMPLEMENTATION_SUMMARY.md  LANGGRAPH_WORKFLOWS.md  MIGRATION_ADD_METADATA.md  MIGRATION_TO_TEACHER_TRAINING.md  QUICKSTART.md  QUICKSTART_R2.md  README.md  SECURITY_IMPLEMENTATION.md  SHOTSTACK_SETUP.md  STORAGE_CONFIGURATION.md  STORAGE_METADATA_FIX.md  TROUBLESHOOTING_WORKER.md  VIDEO_GENERATION_SUMMARY.md  VIDEO_GENERATORS.md  VIDEO_ORIENTATION.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
.venv_test/: pyvenv.cfg
examples/: langgraph_examples.py
scripts/: add_auth_system.py  add_generator_type_column.py  add_metadata_column.py  add_script_column.py  add_task_id_to_briefing.py  add_user_id_column.sql  add_video_orientation_column.py  add_video_orientation_column.sql  check_celery_worker.py  check_deploy_ready.py  check_storage_config.py  check_tts_config.py  create_tables.py  deploy_render.sh  dev.sh  force_recreate.sh  migrate_to_teacher_training.py  nuclear_reset.sh  recreate_tables.py  reset_database.py  setup_db.sh  test_elevenlabs_auth.py  test_presigned_url.py  test_storage_metadata.py  test_table_structure.py  test_upload_download_flow.py  test_video_generators.py  test_video_orientation.py  test_workflows.py
src/: __init__.py  app.py  main.py
tests/: __init__.py  (+2 more)
(+55 files in other folders)
